# cydia-substrate

./: .gitignore  Cargo.toml  PUBLISHING.md  QUICKSTART.md  README.md  substrate.h
.claude/: settings.local.json
examples/: android_game_hook.rs  basic_hook.rs  error_handling.rs  example.c  example.cpp  library_hook.rs  multi_arch.rs
src/: debug.rs  error.rs  lib.rs  utils.rs
src/arch/: aarch64.rs  arm.rs  mod.rs  thumb.rs  x86_64.rs
src/disasm/: arm_decoder.rs  hde64.rs  mod.rs
src/hook/: memory.rs
src/symbol/: elf.rs  finder.rs  memmap.rs  mod.rs
