[package]
name = "substrate-rs"
version = "0.1.2"
edition = "2021"
authors = ["Rodroid Mods"]
description = "Powerful function hooking library for Android and Linux - Rust rewrite of Cydia Substrate and And64InlineHook"
readme = "README.md"
homepage = "https://github.com/rodroidmods/cydia-substrate"
repository = "https://github.com/rodroidmods/cydia-substrate"
license = "LGPL-3.0"
keywords = ["hook", "inject", "android", "il2cpp", "substrate"]
categories = ["api-bindings", "os", "development-tools"]
documentation = "https://docs.rs/substrate-rs"

[lib]
name = "substrate"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
thiserror = "1.0"
cfg-if = "1.0"

[dev-dependencies]

[features]
debug = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
strip = true
debug = false
overflow-checks = false

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "armv7-unknown-linux-gnueabihf", "aarch64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]